# 3D_ODE_Plotter

./: CMakeLists.txt  ODEs_visualizator.cpp  README.md  resultsreader.h
